Fix endpoint issues
